--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <link rel="apple-touch-icon" href="./logo192.png" />
     <link rel="manifest" href="./manifest.json" />
     <script type="text/javascript">
-        (function (c, l, a, r, i, t, y) {
-            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-        })(window, document, "clarity", "script", "e9evt2zm9w");
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "qw02ozufxf");
     </script>
     <script defer="defer"
         src="https://cdn.jsdelivr.net/gh/danwahlin/Featured-Content@gh-pages/dist/main-0.9.min.js"></script>
@@ -69,7 +69,7 @@
     <div class="cookie-banner" id="cookieBanner" style="display: none;">
         <p>We use cookies to personalize content, measure performance, and provide you with a better experience. Select 'Deny' to change your cookie settings, otherwise, we'll assume you're OK with the site using cookies.</p>
         <div class="buttons">
-            <!-- <button id="acceptCookies">Accept</button> -->
+            <button id="acceptCookies">Accept</button>
             <button id="denyCookies">Deny</button>
         </div>
     </div>
@@ -86,7 +86,7 @@
 
             document.getElementById('acceptCookies').addEventListener('click', function () {
                 localStorage.setItem('cookiesAccepted', 'true');
-                window.clarity('consent');
+                window.clarity('consent', true);
                 document.getElementById('cookieBanner').style.display = 'none';
                 // Here you could initialize analytics or any other script that requires cookies
             });
